--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
             android:name=".RegisterActivity"
             android:exported="true" />
 
+        <activity android:name=".EmpresaActivity" />
+
+
     </application>
 
 </manifest>
